Open a picture from file
Set a Bottom to open a picture

--- a/LightBulb/lightbulb.ui
+++ b/LightBulb/lightbulb.ui
@@ -1,25 +1,48 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>LightBulbClass</class>
- <widget class="QWidget" name="LightBulbClass" >
-  <property name="objectName" >
-   <string notr="true">LightBulbClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="LightBulbClass">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>600</width>
-	<height>400</height>
+    <x>0</x>
+    <y>0</y>
+    <width>600</width>
+    <height>400</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>LightBulb</string>
   </property>
+  <widget class="QPushButton" name="openButton">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>350</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>PushButton</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="imagelabel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>54</width>
+     <height>12</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="lightbulb.qrc"/>
+  <include location="lightbulb.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
